# wasmbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/wasmbox/: wasmbox.h
src/: allocator.c  allocator.h  input-stream.c  input-stream.h  interpreter.c  interpreter.h  leb128.c  leb128.h  opcodes.h  wasmbox.c
test/: allocator_test.c  leb128_test.c  runner.c  wasmbox_test.c
test/wasm/: 42.c.wasm  add-f32.c  add-f32.c.wasm  add-f32.c.wasm.result  add-f64.c  add-f64.c.wasm  add-f64.c.wasm.result  add-i32.c  add-i32.c.wasm  add-i32.c.wasm.result  add-i64.c  add-i64.c.wasm  add-i64.c.wasm.result  add-sub.c  add-sub.c.wasm  add-sub.c.wasm.result  addsub.c  addsub.c.wasm  addsub.c.wasm.result  and-i32.c  and-i32.c.wasm  and-i64.c  and-i64.c.wasm  and-i64.c.wasm.result  argument.c  argument.c.wasm  argument.c.wasm.result  br_table.wat  br_table.wat.wasm  br_table.wat.wasm.result  c2wasm.sh  clz_i32.wat  clz_i32.wat.wasm  clz_i32.wat.wasm.result  clz_i64.wat  clz_i64.wat.wasm  clz_i64.wat.wasm.result  constant-i32.c  constant-i32.c.wasm  constant-i32.c.wasm.result  (+312 more)
